# AVALIA

./: .gitignore  CLAUDE.md  PLANO-MELHORIAS.md  PROGRESS.md  README.md  conftest.py  plan.md  pyproject.toml  pytest.ini  spec.md  tasks.md
.claude/: settings.json
.claude/hooks/: block_sql_destructive.py  format.py  guard_model_access.py  guard_no_target_exec.py  protect_secrets.py  quality_gate.py
.github/workflows/: ci.yml
src/avalia/: __init__.py  __main__.py  aggregate.py  classify.py  cli.py  compare.py  divergence.py  ingest.py  loader.py  weights_select.py
tests/acceptance/: test_acceptance_matrix.py  test_reproducibility.py
tests/cli/: test_cli.py  test_loader.py
tests/config/: test_evaluator_config.py  test_weight_profiles.py
tests/divergence/: test_divergence.py
tests/domain/: test_contracts.py  test_enums_evidence.py  test_taxonomy.py
tests/evaluators/: test_checks_trajetoria.py  test_dimensions.py
tests/extract/: test_config_extractor.py  test_contradictions.py  test_extractor_m2.py  test_harness_detection.py  test_imperative_robustness.py  test_prioritize.py  test_python_extractor.py  test_readability.py  test_treesitter_extractor.py
tests/fixtures/: README.md
tests/graph/: test_e2e.py  test_m11_serde.py  test_m3_hitl.py  test_m4_history.py  test_m5_budget.py  test_m5_streaming.py
tests/guards/: test_hooks.py  test_no_target_exec.py  test_protect_and_sql.py
tests/hitl/: test_approval.py
tests/judge/: test_judge_framework.py
tests/metaeval/: test_metaeval_smoke.py
tests/model_gateway/: test_gateway.py
(+84 files in other folders)
